kubernetes/apps/home-automation/serpbear/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: serpbear
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      name: web-ui
      targetPort: 3000
  selector:
    app: serpbear
